--- a/playbooks/test_playbook.yml
+++ b/playbooks/test_playbook.yml
@@ -9,4 +9,7 @@
     - name: Debug max_clients
       debug:
         msg: "Max Clients: {{ max_clients }}"
+    - name: Debug localhost
+      debug:
+        msg: "Max Clients: {{ server_list }}"
 
